--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -34,6 +34,7 @@ body #main{
 
 }
 
+/* CSS cho header */
 body #main #header{
     width: 100%;
     height: 54.5px;
@@ -43,21 +44,35 @@ body #main #header{
     background-color:aquamarine;
 }
 
+/* CSS cho web name */
 body #main #header #web-name{
-
-}
-body #main #header #web-name a {
     width: 235px;
     height: 39px;
+    padding: 8px 16px;
+    
+}
+body #main #header #web-name a {
     text-decoration: none;
     color: black;
     font-family:'Times New Roman', Times, serif;
     font-size: 15px;
-    padding: 8px 16px;
+    line-height: normal;
+    vertical-align: middle;
 }
-body #main #header #web-name a:hover {
+
+body #main #header #web-name:hover {
     background-color: rgba(0, 0, 0, 0.17);
 }
+/* End CSS cho web name */
+
+/* Start CSS cho nav */
+body #main #header #nav{
+    position: absolute;
+    right: 20px;
+    width: 280px;
+    height: 39px;
+}
+
 body #main #header #nav li  {
     color:black;
     font-family:'Times New Roman', Times, serif;
@@ -66,12 +81,31 @@ body #main #header #nav li  {
     display:inline-block;
 }
 body #main #header #nav li a {
+    height: 39px;
     text-decoration: none;
     display:block;
     padding: 8px 16px;
 }
 body #main #header #nav li a:hover {
     background-color: rgba(0, 0, 0, 0.17);
-}
+} 
+/* End CSS nav */
 
+/* Start CSS banner */
+body #main #banner {
+    max-width: 100%;
+    height: auto;
+}
+body #main #banner img{
+    max-width: 100%;
+    height: auto;
+}
+body #main #banner #img_name {
+    width:274px;
+    height: 98px;
+    margin: 10px 0px;
+    padding: 12px 24px;
+    position:absolute;
+    bottom: 0px;
+}
 
