--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -203,36 +203,120 @@ body #main #content #menu {
     width:1100px;
     height: 905px;
     padding: 64px 0px;
-    background-color: aqua;
+    background-color: white;
     position:relative;
 }
 body #main #content #menu-infor {
     width: 550px;
     height: 673px;
     padding: 12px 24px;
-    background-color: chartreuse;
-    line-height: normal;
-    vertical-align: middle;
+    background-color: white;
+
 }
 body #main #content #menu-infor #menu-tittle {
     width: 100%;
     height: 54px;
     margin:10px 0px;
     text-align: center;
+    padding: 11px 0px;
+    /* (chiều cao div - cỡ chữ) : 2 = padding */
 }
-body #main #content #menu-infor #menu-dish-name {
+body #main #content #menu-infor h4 {
     width: 100%;
     height: 30px;
     margin: 10px 0px;
+    font-size: 20px;
 }
+body #main #content #menu-infor p {
+    width: 100%;
+    height: 30px;
+    margin: 15px 0px;
+    font-size: 15px;
+}
+
+
 body #main #content #menu-img {
     width: 550px;
     height: 770px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     right:0px;
     top: 64px;
-    background-color: aquamarine;
+    background-color:white;
 }
+body #main #content #menu-img img {
+}
+/* End CSS menu */
+body #main #content hr {
+}
+/* Start CSS contact*/
+body #main #content #contact {
+    width: 1100px;
+    height: 754px;
+    position: relative;
+    background-color: white;
+    padding: 64px 16px;
+}
+body #main #content #contact h1 {
+    width: 100%;
+    height: 54px;
+    margin: 10px 0px;
+    font-size: 36px;
+}
+body #main #content #contact #contact-first-infor {
+    width: 100%;
+    height: 45px;
+    margin: 15px 0px;
+    font-size: 15px;
+    background-color: white;
+}
+body #main #content #contact #contact-second-infor {
+    width: 100%;
+    height: 27px;
+    margin: 18px 0px;
+    background-color:white;
+}
+body #main #content #contact #contact-second-infor b {
+    width: 420px;
+    height: 20px;
+    font-size: 18px;
+}
+body #main #content #contact #contact-third-infor {
+    width: 100%;
+    height: 23px;
+    margin: 15px 0px;
+    background-color:white;
+    font-size: 15px;
+}
+body #main #content #contact input {
+    width: 100%;
+    height: 56px;
+    padding: 16px 8px;
+    display: block;
+    border-top: solid 0.5px white;
+    border-left:solid 0.5px white ;
+    border-right: solid 0.5px white;
+    border-bottom: solid 0.5px black;
+}
+body #main #content #contact #contact-button {
+    width: 100%;
+    height: 71px;
+    margin: 15px 0px;
+}
+body #main #content #contact #contact-button button{
+    width: 145px;
+    height: 39px;
+    margin: 16px 0px;
+    font-size: 13px;
+    padding: 8px 16px;
+    background-color: rgba(0, 0, 0, 0.17);
+    border: solid 0.5px white;
+}
+/* End CSS contact */
+/* Start CSS footer */
+
 
 
 
