--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -35,14 +35,19 @@ body #main{
 }
 
 /* CSS cho header */
-body #main #header{
+body #main #header {
+    position: sticky;
+    top: 0px;
+    z-index: 3;
     width: 100%;
     height: 54.5px;
     display: flex;
     align-items: center;
     padding: 8px 16px;
     background-color:white;
+    box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);;
 }
+
 
 /* CSS cho web name */
 body #main #header #web-name{
@@ -85,6 +90,7 @@ body #main #header #nav li a {
     text-decoration: none;
     display:block;
     padding: 8px 16px;
+    color:black;
 }
 body #main #header #nav li a:hover {
     background-color: rgba(0, 0, 0, 0.17);
@@ -116,6 +122,7 @@ body #main #banner #img_name h1 {
     line-height: normal;
     vertical-align: middle;
     font-weight: normal;
+    letter-spacing: 3.5px;
 }
 /* End CSS banner */
 
@@ -164,6 +171,7 @@ body #main #content #about #about-infor {
     font-size: 36px;
     margin: 10px 0px;
     font-weight: normal;
+    letter-spacing: 3.5px;
 }
 
 body #main #content #about #about-extra-tittle {
@@ -173,6 +181,7 @@ body #main #content #about #about-extra-tittle {
     margin: 10px 0px;
     font-size: 18px;
     font-weight: normal;
+    letter-spacing: 3.5px;
 
 }
 
@@ -228,6 +237,7 @@ body #main #content #menu-infor #menu-tittle {
     text-align: center;
     padding: 11px 0px;
     font-weight: normal;
+    letter-spacing: 3.5px;
     /* (chiều cao div - cỡ chữ) : 2 = padding */
 }
 body #main #content #menu-infor h4 {
@@ -236,6 +246,7 @@ body #main #content #menu-infor h4 {
     margin: 10px 0px;
     font-size: 20px;
     font-weight: normal;
+    letter-spacing: 3.5px;
 }
 body #main #content #menu-infor p {
     width: 100%;
@@ -276,6 +287,7 @@ body #main #content #contact h1 {
     margin: 10px 0px;
     font-size: 36px;
     font-weight: normal;
+    letter-spacing: 3.5px;
 }
 body #main #content #contact #contact-first-infor {
     width: 100%;
@@ -331,6 +343,8 @@ body #main #content #contact #contact-button button{
     border: solid 0.5px white;
 }
 /* End CSS contact */
+/* End CSS content */
+
 /* Start CSS footer */
 body #main #footer {
     width: 100%;
